test/failing/context-sadchild.trunnel


context c {
  u8 foo;
}

struct x with context c {
  u8 stuff[c.foo];
}

struct y {
  struct x the_x;
}

